WMG112519/force-app/main/default/objects/Event_Updates__c/Event_Updates__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Event Updates</label>
</CustomObject>