WMG112519/force-app/main/default/objects/Event_Updates__c/fields/Event_Field__c.field-meta.xml
<CustomField>
    <fullName>Event_Field__c</fullName>
    <label>Event Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>