WMG112519/force-app/main/default/objects/Event_Updates__c/fields/Event_Value__c.field-meta.xml
<CustomField>
    <fullName>Event_Value__c</fullName>
    <label>Event Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>