WMG112519/force-app/main/default/objects/Event_Updates__c/fields/Field_To_Update__c.field-meta.xml
<CustomField>
    <fullName>Field_To_Update__c</fullName>
    <label>Field To Update</label>
    <length>80</length>
    <type>Text</type>
</CustomField>