WMG112519/force-app/main/default/objects/Event_Updates__c/fields/Object_To_Update__c.field-meta.xml
<CustomField>
    <fullName>Object_To_Update__c</fullName>
    <label>Object To Update</label>
    <length>40</length>
    <type>Text</type>
</CustomField>